<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search"
            />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/person" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/baseline_chat_24"
            android:title="@string/fav" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/ad_drawer" />
    </group>



</menu>
