<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"

        >

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/photo_text"
            android:textColor="@color/color_ActivityMain"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/photoPickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/baseline_add_24"
            android:src="@drawable/imagepicker" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            />


        <EditText
            android:id="@+id/adv_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/adv_name"
            android:inputType="textMultiLine" />


        <TextView
            android:id="@+id/spinner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/spinner_title1"
            android:textColor="@color/color_ActivityMain"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/category_spinner_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:prompt="@string/spinner_title1"
            android:spinnerMode="dropdown"


            />

        <EditText
            android:id="@+id/price_EditText_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/adv_description_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/adv_description"
            android:inputType="textMultiLine" />


        <TextView
            android:id="@+id/spinner_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/spinner_title2"
            android:textColor="@color/color_ActivityMain"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/city_spinner_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:prompt="@string/spinner_title2"
            android:spinnerMode="dropdown"

            />


        <EditText
            android:id="@+id/adv_ownerName_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/adv_owner"
            android:inputType="textMultiLine" />


        <EditText
            android:id="@+id/owner_mail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/mail_owner"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/phone_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/owner_phone"
            android:inputType="number" />


        <Button
            android:id="@+id/add_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/ripple"
            android:text="@string/add_button"
            android:textColor="@android:color/white"

            />


    </LinearLayout>
</ScrollView>
