<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingLeft="24dp"

        >

        <!--<TextView-->
            <!--android:id="@+id/tv_title_update"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/photo_text"-->
            <!--android:textColor="#ff0004"-->
            <!--android:textStyle="bold" />-->


        <ImageButton
            android:id="@+id/imageButton_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/baseline_add_24"
            android:src="@drawable/imagepicker" />

        <ImageView
            android:id="@+id/imageView_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp" />


        <EditText
            android:id="@+id/editText_adName_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/adv_name"
            android:inputType="textMultiLine" />


        <TextView
            android:id="@+id/spinner_title_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/spinner_title1"
            android:textColor="@color/color_ActivityMain"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/category_spinner_id_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:prompt="@string/spinner_title1"
            android:spinnerMode="dropdown"
            android:entries="@array/Recycling_category"


            />

        <EditText
            android:id="@+id/editText_price_id_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            />



        <EditText
            android:id="@+id/editText_ad_des_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/adv_description"
            android:inputType="textMultiLine" />


        <TextView
            android:id="@+id/spinner_title2_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/spinner_title2"
            android:textColor="@color/color_ActivityMain"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_city_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:prompt="@string/spinner_title2"
            android:spinnerMode="dropdown"
            android:entries="@array/city"

            />


        <EditText
            android:id="@+id/editText_ad_ownerName_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/adv_owner"
            android:inputType="textMultiLine" />


        <EditText
            android:id="@+id/editText_ad_ownerMail_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/mail_owner"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editText_ad_phone_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/owner_phone"
            android:inputType="number" />


        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/ripple"
            android:text="@string/updateButton"
            android:textColor="@android:color/white"

            />


        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/ripple"
            android:text="@string/DeleteButton"
            android:textColor="@android:color/white"

            />


    </LinearLayout>
</ScrollView>
